Hook repositories page to API
