# openapi.yaml
@@ -132,6 +132,26 @@ paths:
           required: true
           schema:
             type: string
+        - in: query
+          name: page_size
+          description: Page size
+          required: false
+          schema:
+            type: integer
+        - in: query
+          name: page
+          description: Page index
+          required: false
+          schema:
+            type: integer
+        - in: query
+          name: ordering
+          description: Sort order
+          required: false
+          schema:
+            type: string
+            default: "last_updated"
+            enum: ["last_updated", "-last_updated", "name", "-name"]
       responses:
         "200":
           description: Repositories
@@ -361,6 +381,20 @@ paths:
           required: false
           schema:
             type: integer
+        - in: query
+          name: page
+          description: Page index
+          required: false
+          schema:
+            type: integer
+        - in: query
+          name: ordering
+          description: Sort order
+          required: false
+          schema:
+            type: string
+            default: "last_updated"
+            enum: ["last_updated", "-last_updated", "name", "-name"]
       responses:
         "200":
           description: Organizations
